2010-05-28  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* CardiacToolbox/process_misas_patient.m

	- Remove assumption that subdirectories with IMA files are called
	MISAS*. We need this because Jason will rename the MISAS*
	directories to NormalMri1, FatMri1, etc. before running this
	script.

2010-05-27  Ramon Casero  <ramc@clpc444.comlab>

	* Add CardiacToolbox/process_misas_patient.m

	- Create MetaImage volumes from directory tree of IMA DICOM files,
	for project with human hearts provided by Kelvin Wong.
	
	* FileFormatToolbox/sortdirbynum.m:

	- Fix bug. Exit gracefully when list of input files is empty.

2010-05-25  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add CardiacToolbox/correct_rv_crescent_tips.m

	- Correct the segmentation of the Right Ventricle's crescent tips
	using the segmentation of the tricuspid and pulmonary annula.

2010-05-19  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* CardiacToolbox/scinrrd_rv_crescent_tips.m

	- Extend computation of the RV crescent tips to the RV slices that
	have no corresponding centroid. In that case the first and last
	centroids in the LV axis are used.

2010-05-12  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add PointsToolbox/coords_from_dist_gower.m

	- Compute point coordinates from distances to a set of landmarks,
	as described in Gower (1986).
	
2010-05-09  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FileFormatToolbox/WriteMhaFile.m

	- Fix bug, wrong variable name and function in error message.

	* FileFormatToolbox/dcm2metaimage.m

	- Fix bug when directory in path is the current one.

	* Add PointsToolbox/dmatrix.m

	- Matrix of distances between vectors. Move from Comlab
	repository, matlab-toolbox/misc/trunk.

2010-04-30  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FileFormatToolbox/dcm2metaimage.m:

	- Fix bug with dir name when data is in the current directory.

2010-04-29  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/scinrrd_gradients.m:
