@@ -1,3 +1,9 @@
+2010-06-09  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>
+
+	* CardiacToolbox/crest_envelope.m:
+
+	- Compute the envelope for the Right Ventricle's crest.
+
 2010-05-28  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>
 
 	* CardiacToolbox/process_misas_patient.m
